@@ -1,4 +1,8 @@
-﻿shmuel 18.07.2016 17:55:32 +0200 - build 580.
+﻿shmuel 13.08.2016 18:24:05 +0200 - build 581
+
+1. Уточнения 579,580.
+
+shmuel 18.07.2016 17:55:32 +0200 - build 580
 
 1. Макро-браузер отображает поле "id" в диалоге информации о макросе.
 
